--- a/views/products_index.ejs
+++ b/views/products_index.ejs
@@ -16,7 +16,7 @@
       </article>
       <% } %>
     </section>
-    <% if (typeof user_id !=='undefined' ) { %>
+    <% if (typeof userObj !=='undefined' ) { %>
   <div class="sorting-buttons">
     <div class="form-check form-switch">
       <input class="form-check-input" type="checkbox" id="favouritesOnly">
