--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,11 +10,11 @@
             <div class="form-group">
               <h3>Create an account</h3>
               <label for="name">Name:</label>
-              <input class="form-control" type="text" name="name" />
+              <input class="form-control" type="text" name="name" required/>
               <label for="email">Email:</label>
-              <input class="form-control" type="email" name="email" />
+              <input class="form-control" type="email" name="email" required/>
               <label for="password">Password:</label>
-              <input class="form-control" type="password" name="password" />
+              <input class="form-control" type="password" name="password" required/>
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </form>
