update unique product img css properties

--- a/styles/products_unique.scss
+++ b/styles/products_unique.scss
@@ -17,7 +17,8 @@ main.unique-listing-info {
       padding: 0 2em 0;
 
       img {
-        height: auto;
+        height: 100%;
+        width: 100%;
       }
 
       div {
