--- a/views/products_unique.ejs
+++ b/views/products_unique.ejs
@@ -15,11 +15,11 @@
     </div>
       <div class="unique-listing-buttons">
         <% if (typeof userObj !=='undefined' && userObj.admin === true) { %>
-          <button id="addFavourite" value="<%= `${product.id}` %>" class="<%= isFavourite ? 'disabled-btn' : '' %>"><%= isFavourite ? "Favourite" : "Add As Favourite" %></button>
+          <button id="addFavourite" value="<%= `${product.id}` %>" class="<%= isFavourite ? 'disabled-btn' : '' %>"><%= isFavourite ? "Favourited" : "Add As Favourite" %></button>
           <button id="markSold" value="<%= `${product.id}` %>" class="<%= product.sold ? 'disabled-btn' : '' %>"><%= product.sold ? "Sold" : "Mark As Sold" %></button>
           <button id="deleteListing" value="<%= `${product.id}` %>">Delete Listing</button>
           <% } else if (typeof userObj !=='undefined') { %>
-          <button id="addFavourite" value="<%= `${product.id}` %>" class="<%= isFavourite ? 'disabled-btn' : '' %>"><%= isFavourite ? "Favourite" : "Add As Favourite" %></button>
+          <button id="addFavourite" value="<%= `${product.id}` %>" class="<%= isFavourite ? 'disabled-btn' : '' %>"><%= isFavourite ? "Favourited" : "Add As Favourite" %></button>
           <button id="msgBreeder">Contact Breeder</button>
           <% } else { %>
           <button id="msgBreeder">Contact Breeder</button>
